# simulator_project

./: README  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/simproj/: outputter.py  siminit.py  simulator.py
src/simproj/models/numberstream/: base.py  numberstreamator_adaptor.py
src/simproj/models/rearrangement/: base.py
tests/: mocks.py  test.py
tests/config_files/: basicconfig.toml  minimalconfig.toml  modelconfig.toml  nooutconfig.toml
