
[project]
name = "sim_project"
version = "0.0.1"
description = "Some simulation project"
dependencies = [
    "pandas",
    "tomli"
]

[project.optional-dependencies]
TEST = [
    "pytest",
    "pytest-cov[all]"
]
LINT = [
    "flake8"
]
CICD = [
    "flake8",
    "pytest",
    "pytest-cov[all]",
    "pyre-check"
]

[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "--cov-branch --cov-report term-missing --cov-fail-under 80"
